--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,16 +11,16 @@ body {
 }
 
 #animation-container {
-  max-height: 65px;
-  height: 65px;
-  transition: max-height 0.5s ease-in-out;
+  max-height: 0;
+  height: 0px;
+  animation: appear 0.5s ease-in-out 0.5s forwards;
 }
 
 #animation {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
-  height: 60px;
+  padding-top: 5px;
 }
 
 .wave {
@@ -62,17 +62,22 @@ body {
 
 @keyframes wave {
   0% {
-    // transform: scale(0);
     height: 0;
   }
   50% {
-    // transform: translateY(0%);
-    // opacity: 0;
     height: 30px;
   }
   100% {
-    // transform: translateY(100%);
-    // opacity: 1;
     height: 0;
+  }
+}
+
+@keyframes appear {
+  0% {
+    max-height: 0;
+  }
+  100% {
+    max-height: 50px;
+    height: 50px;
   }
 }
